--- a/lab4/src/main/res/values/strings.xml
+++ b/lab4/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="lab4_title">I\'m %s!</string>
+
 
     <string name="lab4_first_name">First name</string>
     <string name="lab4_second_name">Second name</string>
@@ -11,4 +11,21 @@
 
     <string name="lab4_error_empty_fields">All fields must not be empty</string>
     <string name="lab4_error_already_exists">The student already exists</string>
+    <string name="lab4_title">I\'m %s!</string>
+
+
+    <string name="lab4_group_name">Group</string>
+    <string name="lab4_sex">Sex</string>
+
+    <string name="lab4_action_choice">Choice</string>
+    <string name="lab4_nosort">No sorting</string>
+    <string name="lab4_sort_by_group">By group</string>
+    <string name="lab4_sort_by_sex">By sex</string>
+    <string name="lab4_title_sorting">How to sort?</string>
+    <string-array name="lab4_sex_list">
+        <item>Men</item>
+        <item>Girl</item>
+    </string-array>
+
+
 </resources>
